--- a/style.css
+++ b/style.css
@@ -5,13 +5,53 @@
   width: 100%;
   height: 60px;
   background-color: #fff;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 0px 5px 1px #000000;
+   -moz-box-shadow: 0px 0px 5px 1px #000000;
+        box-shadow: 0px 0px 5px 1px #000000;
 }
 
 .btn-group {
   margin: 20px;
+  float: left;
+}
+
+.settings {
+  margin: 20px;
+  float: right;
+}
+
+.settings span {
+  font-size: 34px;
+  vertical-align: middle;
+  color: gray;
+}
+
+.settings span:hover {
+  font-size: 34px;
+  color: black;
 }
 
 #canvas {
   margin-top: 80px;
   margin-left: 20px;
+}
+
+.rotate {
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+    
+  -webkit-transition-property: -webkit-transform;  
+  -moz-transition-property: -moz-transform;  
+  -o-transition-property: -o-transform;  
+  transition-property: transform;
+  overflow: hidden;
+}  
+ 
+.rotate:hover {  
+  -webkit-transform:rotate(90deg);
+  -moz-transform:rotate(90deg);
+  -o-transform:rotate(90deg);
 }
