--- a/style.css
+++ b/style.css
@@ -3,38 +3,86 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 60px;
-  background-color: #fff;
+  height: 12em;
+  background-color: #95AFBA;
   overflow: hidden;
   -webkit-box-shadow: 0px 0px 5px 1px #000000;
    -moz-box-shadow: 0px 0px 5px 1px #000000;
         box-shadow: 0px 0px 5px 1px #000000;
 }
 
-.btn-group {
-  margin: 20px;
+.menu .title {
+  font-family: 'Lato', sans-serif;
+  font-size: 4em;
+  margin-left: 0.5em;
+  margin-top: 0.5em;
+  width: 60%;
+  float: left;
+  color: #32282B;
+}
+
+.menu .btn-group {
+  margin-top: 1.5em;
+  margin-left: 2em;
   float: left;
 }
 
-.settings {
-  margin: 20px;
+.menu .settings {
+  width: 40%;
+  height: 12em;
+  background-color: #587B7F;
   float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
-.settings span {
-  font-size: 34px;
-  vertical-align: middle;
-  color: gray;
+.menu .settings .cog {
+  position: relative;
+  margin-left: 40%;
+  margin-top: 2%;
+  font-size: 3em;
+  color: #E8F7EE;
 }
 
-.settings span:hover {
-  font-size: 34px;
-  color: black;
+.menu .settings .cog:hover {
+  color: #32282B;
+}
+
+.menu .settings div {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 250px;
+}
+
+.menu .settings div span {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  font-size: 2em;
+  color: #E8F7EE;
+}
+
+.menu .settings div span:hover {
+  color: #32282B;
+}
+
+body {
+  background-color: #E8F7EE;
+}
+
+.canvas-container {
+  width: 90%;
+  margin-top: 13em;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  display: block;
 }
 
 #canvas {
-  margin-top: 80px;
-  margin-left: 20px;
+  display: inline;
+  background-color: #E8F7EE;
 }
 
 .rotate {
