--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 .menu {
   position: fixed;
   top: 0;
-  right: 0;
-  width: 100%;
-  height: 12em;
+  left: 0;
+  width: 350px;
+  height: 100%;
   background-color: #95AFBA;
   overflow: hidden;
   -webkit-box-shadow: 0px 0px 5px 1px #000000;
    -moz-box-shadow: 0px 0px 5px 1px #000000;
         box-shadow: 0px 0px 5px 1px #000000;
+  z-index: 999;
 }
 
 .menu .title {
@@ -21,23 +22,37 @@
   color: #32282B;
 }
 
-.menu .controls {
-  width: 40%;
-  height: 12em;
-  float: right;
+.controls {
+  width: 5%;
   position: absolute;
   top: 0;
-  right: 0;
+  left: 280px;
+  overflow: visible;
+  z-index: 1000;
 }
 
-.menu .controls .control {
-  font-size: 1.5em;
+.controls .control-container {
+  width: 4em;
+  height: 4em;
+  margin-left: 3.3em;
   margin-top: 1.5em;
-  margin-left: 2em;
-  float: left;
+  background-color: #95AFBA;;
+  border-radius: 100%;
+  clear: both;
 }
 
-.menu .controls .control:hover {
+.controls .control-container:hover {
+  margin-left: 3.8em;
+}
+
+.controls .control {
+  font-size: 2em;
+  margin: 0.5em;
+}
+
+.controls .control:hover {
+  font-size: 2.5em;
+  margin: 0.25em;
   color: #fff;
 }
 
@@ -46,10 +61,10 @@ body {
 }
 
 .canvas-container {
-  width: 90%;
-  margin-top: 13em;
+  width: 60%;
+  margin-top: 2em;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 400px;
   text-align: center;
   display: block;
 }
