--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 350px;
+  width: 65px;
   height: 100%;
-  background-color: #95AFBA;
+  background-color: #634B66;
   overflow: hidden;
   -webkit-box-shadow: 0px 0px 5px 1px #000000;
    -moz-box-shadow: 0px 0px 5px 1px #000000;
@@ -23,77 +23,69 @@
 }
 
 .controls {
-  width: 5%;
-  position: absolute;
-  top: 0;
-  left: 280px;
-  overflow: visible;
+  width: 80px;
+  position: fixed;
+  overflow: hidden;
   z-index: 1000;
 }
 
 .controls .control-container {
-  width: 4em;
+  width: 3em;
   height: 4em;
-  margin-left: 3.3em;
-  margin-top: 1.5em;
-  background-color: #95AFBA;;
-  border-radius: 100%;
+  background-color: #634B66;
   clear: both;
 }
 
 .controls .control-container:hover {
-  margin-left: 3.8em;
+  background-color: #4F0147;
 }
 
 .controls .control {
+  color: #18020C;
   font-size: 2em;
   margin: 0.5em;
 }
 
 .controls .control:hover {
-  font-size: 2.5em;
-  margin: 0.25em;
   color: #fff;
 }
 
 body {
-  background-color: #E8F7EE;
+  background-color: #F7FFFF;
 }
 
 .stats {
   margin-top: 20px;
-  margin-left: 400px;
+  margin-left: 100px;
 }
 
 .canvas-container {
-  width: 60%;
+  width: 1000px;
   margin-top: 2px;
   margin-right: auto;
-  margin-left: 400px;
+  margin-left: 100px;
   text-align: center;
   display: block;
 }
 
 #canvas {
   display: inline;
-  background-color: #E8F7EE;
+  background-color: #F7FFFF;
 }
 
-.rotate {
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+.expand {
+  -webkit-transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s;
     
   -webkit-transition-property: -webkit-transform;  
   -moz-transition-property: -moz-transform;  
   -o-transition-property: -o-transform;  
-  transition-property: transform;
+  transition-property: width;
   overflow: hidden;
 }  
  
-.rotate:hover {  
-  -webkit-transform:rotate(90deg);
-  -moz-transform:rotate(90deg);
-  -o-transform:rotate(90deg);
+.expand:hover {  
+  width: 6em;
 }
