--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@
   display: inline;
   margin-left: -20px;
   padding-bottom: 20px;
-  font-weight: 700;
+  font-weight: 900;
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
   line-height: 1;
   color: #fff;
   white-space: nowrap;
