--- a/style.css
+++ b/style.css
@@ -24,12 +24,14 @@
 
 .controls {
   width: 100px;
+  height: 100%;
   position: fixed;
   overflow: visible;
   z-index: 1000;
 }
 
 .controls .control-container {
+  position: relative;
   width: 70px;
   height: 55px;
   background-color: #634B66;
@@ -46,6 +48,28 @@
   margin-left: 0.5em;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+}
+
+.link {
+  position: absolute !important;
+  color: #18020C;
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+.link a {
+  text-decoration: none !important;
+  color: #fff;
+}
+
+.github-link {
+  bottom: 10px;
+  margin-left: 7px;
+}
+
+.website-link {
+  bottom: 10px;
+  margin-left: 37px;
 }
 
 .controls .control:hover {
